src/test/deca/syntax/invalid/intermediaire2/elseif/02noif.deca
{
    else if (2 > 1) {
        print("Trop grand !");
    }
}